--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>YouTube Playlist Video Search</title>
   <link rel="icon" type="image/x-icon" href="icon.ico">
   <link rel="stylesheet" href="style.css">
